--- a/storedprocedure.html
+++ b/storedprocedure.html
@@ -304,7 +304,7 @@
                 <div class="col-lg-12 text-center">
                     <div class="chapter">
                         <p>
-                            As explained in <a href="/index.html#inmemory">Entity replication</a> siesta allows to generate every table twice. Once
+                            As explained in <a href="/entities.html#inmemory">Entity replication</a> siesta allows to generate every table twice. Once
                             with the memory engine and once with the configured engine. To make sure that this logic also works with custom defined
                             stored procedures you set the attribute <code>modifies="true|false"</code>. This way siesta knows if the provided sql
                             should process only on the memory table or on both. Therefore you also use the tableplace holder <code>!TABLE!</code>.
