--- a/index.html
+++ b/index.html
@@ -205,12 +205,47 @@ vendor/bin/siesta init
                 <div class="col-lg-12 text-center">
                     <div class="chapter">
                         <p>
-                            The following XML describes 2 entities. One named <i>Artist</i> and one named <i>Label</i>. Both entities have
+                            The example is available in the distribution. Just run the commands to generate the classes. They will be created in
+                            the folder <i>helloworld</i> folder.
+                        </p>
+                        <pre class="prettyprint">
+    vendor/bin/siesta init
+    vendor/bin/siesta generate --entityFileSuffix .hello.xml</pre>
+                        <p>
+                            The following code shows how the classes can be used. First Artist and Label object are instantiated.
+                            Then the relation between both is established by <code>$label->addToArtistList($artist);</code>. The save
+                            method can be invoked with <code>true</code> that will result in a cascading save. That means that both objects
+                            will be stored.
+                        </p>
+                        <pre class="prettyprint">
+&lt;?php
+    namespace test;
+
+    require_once 'vendor/autoload.php';
+    require_once ('helloworld/Artist.php');
+    require_once ('helloworld/Label.php');
+
+    use helloworld\Artist;
+    use helloworld\Label;
+
+    $artist = new Artist();
+    $artist->setName("Jamie Woon");
+
+    $label = new Label();
+    $label->setName("PMR");
+    $label->setCity("London");
+    $label->addToArtistList($artist);
+
+    // save with cascade. will store both label and artist
+    $label->save(true);</pre>
+
+                        <p>
+                            The XML used describes 2 entities. One named <i>Artist</i> and one named <i>Label</i>. Both entities have
                             simple attributes with the given php and database types. Furthermore one relation is defined. The Artist &lt;reference&gt; element
                             describes a relationship to the Label class. The Label class has a &lt;collector&gt; element that describes the foreign class
-                            and the name of the reference.
+                            and the name of the reference. The XML can be found in vendor/gm314/siesta/HelloWorld.hello.xml.
                         </p>
-<pre class="prettyprint">
+                        <pre class="prettyprint">
     &lt;entityList&gt;
 
         &lt;entity name="Artist" namespace="helloworld" targetPath="helloworld"&gt;
@@ -228,37 +263,7 @@ vendor/bin/siesta init
             &lt;collector name="artistList" type="1n" foreignClass="Artist" referenceName="label"/&gt;
         &lt;/entity&gt;
 
-    &lt;/entityList&gt;
-</pre>
-
-                        <p>
-                            The example is available in the distribution. Just run the command</p>
-<pre class="prettyprint">
-    vendor/bin/siesta init
-    vendor/bin/siesta generate --entityFileSuffix .hello.xml
-</pre>
-                        <p>
-                            to generate the classes. The generator will search for xml files with the suffix <i>entity.xml</i> in the current
-                            working directory. Adding the --entiyFileSuffix option allows to search for other files.<br><br>
-
-                            This will generate 2 php classes and stored procedures in the database to have persistence methods. The following code
-                            shows how the classes can be used. First an Artist and Label object are instantiated. Then the relation between both
-                            is established by <code>$label->addToArtistList($artist);</code>. The save method can be invoked with <code>true</code> that
-                            will result in a cascading save. That means that both objects will be stored.
-                        </p>
-<pre class="prettyprint">
-    $artist = new Artist();
-    $artist->setName("Jamie Woon");
-
-    $label = new Label();
-    $label->setName("PMR");
-    $label->setCity("London");
-    $label->addToArtistList($artist);
-
-    // save with cascade. will store both label and artist
-    $label->save(true);
-</pre>
-
+    &lt;/entityList&gt;</pre>
                     </div>
                 </div>
             </div>
