code coverage report link

--- a/index.html
+++ b/index.html
@@ -156,7 +156,9 @@
                             <b>Delimiting Tables / Record History</b><br>
                             Sometimes it is important to track changes to objects. Therefore Siesta allows to generate a second history table.
                             Every time the a record is changed, the changes will be stored to the history table with a valid from and valid until
-                            entry.
+                            entry.<br><br>
+
+                            <a href="coverage/index.html">code coverage report</a>
                         </p>
                     </div>
                 </div>
