--- a/storedprocedure.html
+++ b/storedprocedure.html
@@ -62,7 +62,7 @@
                         <a href="/entities.html">Entities</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="/index.html">Relationships</a>
+                        <a href="/relationships.html">Relationships</a>
                     </li>
                     <li class="page-scroll">
                         <a href="/storedprocedure.html">Stored Procedures</a>
