--- a/relationships.html
+++ b/relationships.html
@@ -162,11 +162,183 @@
     public function setLabelId($id) { ... }
 
                         </pre>
+                        <p>
+                            <b>Example:</b><br/>
+                            <a href="https://github.com/gperler/siesta/blob/master/tests/functional/ReferenceTest.php" target="_blank">tests/functional/ReferenceTest.php</a>
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
+
+    <!-- About stored procedures -->
+    <section id="bidrectional">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h1>Bidirectional references</h1>
+                    <hr class="star-primary">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <div class="chapter">
+                        <p>
+                            You can also define bidirectional 1:1 references by adding a relationName attribute to the
+                            reference element.
+                        </p>
+                         <pre class="prettyprint">
+    &lt;entity name="Customer" namespace="siestaphp\tests\functional\bidirectional\gen" table="CUSTOMER" targetPath="gen"&gt;
+        &lt;attribute name="id" type="int" dbName="ID" dbType="INT" primaryKey="true" autoValue="autoincrement"/&gt;
+        &lt;attribute name="name" type="string" dbName="D_STRING" dbType="VARCHAR(100)"/&gt;
+        &lt;attribute name="dob" type="DateTime" dbName="D_DATETIME" dbType="DATETIME"/&gt;
+
+        &lt;reference name="address" foreignClass="Address" relationName="_customer_address_"/&gt;
+    &lt;/entity&gt;
+
+    &lt;entity name="Address" namespace="siestaphp\tests\functional\bidirectional\gen" table="Address" targetPath="gen"&gt;
+        &lt;attribute name="id" type="int" dbName="ID" dbType="INT" primaryKey="true" autoValue="autoincrement"/&gt;
+        &lt;attribute name="street" type="string" dbName="STREET" dbType="VARCHAR(100)"/&gt;
+        &lt;attribute name="city" type="string" dbName="CITY" dbType="VARCHAR(100)"/&gt;
+        &lt;reference name="customer" foreignClass="Customer" relationName="_customer_address_"/&gt;
+    &lt;/entity&gt;</pre>
+                        <p>
+                            Siesta will set the foreign keys accordingly. You only need to disalbe the foreign key
+                            checks from the database before persisting
+                        </p>
+                        <pre class="prettyprint">
+   $customer = new Customer();
+    $customer->setName("Columbo");
+
+    $address = new Address();
+    $address->setCity("Berlin");
+
+    $customer->setAddress($address);
+
+    // disable the foreign key checks before storing
+    $connection = ConnectionFactory::getInstance()->getConnection();
+    $connection->disableForeignKeyChecks();
+    $customer->save(true);
+    $connection->enableForeignKeyChecks();
+
+                        </pre>
+                        <p>
+                            <b>Example:</b><br/>
+                            <a href="https://github.com/gperler/siesta/blob/master/tests/functional/BidirectionalTest.php" target="_blank">tests/functional/BidirectionalTest.php</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- About stored procedures -->
+    <section id="1ncollector">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h1>1-N Collector</h1>
+                    <hr class="star-primary">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <div class="chapter">
+                        <p>
+                            A One to Many Collector will collect all entities that reference the own entity. The following
+                            example shows that the ArtistEntity references 0 or 1 LabelEntity objects. The label entity
+                            defines a collector with the name artistList that collects ArtistEntity objects. It defines
+                            its foreign class and the name of the reference.
+
+                        </p>
+                         <pre class="prettyprint">
+    &lt;entity name="ArtistEntity" namespace="siestaphp\tests\functional\collector1n\gen" table="ARTIST" targetPath="gen/"&gt;
+        &lt;attribute name="id" type="int" dbName="ID" dbType="INT" primaryKey="true" autoValue="autoincrement"/&gt;
+        &lt;attribute name="name" type="string" dbName="D_STRING" dbType="VARCHAR(100)"/&gt;
+        &lt;attribute name="dob" type="DateTime" dbName="D_DATETIME" dbType="DATETIME"/&gt;
+
+        &lt;reference name="label" foreignClass="LabelEntity" required="false"/&gt;
+    &lt;/entity&gt;
+
+    &lt;entity name="LabelEntity" namespace="siestaphp\tests\functional\collector1n\gen" table="LABEL" targetPath="gen"&gt;
+        &lt;attribute name="id" type="int" dbName="ID" dbType="INT" primaryKey="true" autoValue="autoincrement"/&gt;
+        &lt;attribute name="name" type="string" dbName="NAME" dbType="VARCHAR(100)"/&gt;
+        &lt;attribute name="city" type="string" dbName="CITY" dbType="VARCHAR(100)"/&gt;
+
+        &lt;collector name="artistList" type="1n" foreignClass="ArtistEntity" referenceName="label"/&gt;
+    &lt;/entity&gt;</pre>
+                        <p>
+                            The following methods will be generated in the LabelEntity class. They allow to collect
+                            all Artist, that reference the LabelObject. Furthermore all ArtistEntiy Object referencing
+                            this label can be deleted or a ArtistEntity object can be added to the list.
+                        </p>
+                        <pre class="prettyprint">
+    /**
+     * @param bool $forceReload
+     * @param string $connectionName
+     *
+     * @return ArtistEntity[]
+     */
+    public function getArtistList($forceReload = false, $connectionName = null) { ... }
+
+    /**
+     * @return void
+     */
+    public function deleteAllArtistList() { ... }
+
+    /**
+     * @param ArtistEntity $object
+     *
+     * @return void
+     */
+    public function addToArtistList(ArtistEntity $object) { ... }
+
+                        </pre>
+                        <p>
+                            <b>Example:</b><br/>
+                           <a href="https://github.com/gperler/siesta/blob/master/tests/functional/CollectorTest.php" target="_blank">tests/functional/CollectorTest.php</a>
+                        </p>
+                        <h3>Using Filter for collectors</h3>
+                        <p>
+                            A collector can define filters. They allow to only collect those entities that match the
+                            filter. The following filter will check that the name of the referenced object matches
+                            the a certain name. The filter defines parameter that will be available when executing the
+                            query.
+                        </p>
+                        <pre class="prettyprint">
+    &lt;collector name="artistList" type="1n" foreignClass="ArtistEntity" referenceName="label"&gt;
+        &lt;filter name="ByName" filter="name LIKE P_NAME"&gt;
+            &lt;parameter name="name" spName="P_NAME" type="string" dbType="VARCHAR(100)"/&gt;
+        &lt;/filter&gt;
+    &lt;/collector&gt;</pre>
+                        <p>
+                            The following method will be generated in the LabelEntity class. It accepts the defined
+                            parameter in the method and will executed the generated stored procedure.
+                        </p>
+                        <pre class="prettyprint">
+    /**
+     * @param string $name
+     * @param string $connectionName
+     *
+     * @return ArtistEntity[]
+     */
+    public function getArtistListFilterByName($name, $connectionName = null) { ... }
+                        </pre>
+                        <p>
+                            <b>Example:</b><br/>
+                            <a href="https://github.com/gperler/siesta/blob/master/tests/functional/CollectorFilterTest.php">
+                                tests/functional/CollectorFilterTest.php
+                            </a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- Footer -->
     <footer class="text-center">
