--- a/relationships.html
+++ b/relationships.html
@@ -82,7 +82,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <br/><br/><h2>Stored procedures</h2>
+                    <br/><br/><h2>Relationships</h2>
                     <hr class="star-light">
                 </div>
             </div>
