--- a/entities.html
+++ b/entities.html
@@ -667,7 +667,7 @@
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>About Siesta PHP</h3>
-                        <p>Freelance is a free to use, open source PHP ORM.</p>
+                        <p>Siesta is a free to use, open source PHP ORM.</p>
                     </div>
                 </div>
             </div>
