--- a/driver.html
+++ b/driver.html
@@ -231,7 +231,7 @@ try {
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>About Siesta PHP</h3>
-                        <p>Freelance is a free to use, open source PHP ORM.</p>
+                        <p>Siesta is a free to use, open source PHP ORM.</p>
                     </div>
                 </div>
             </div>
